--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
-__pycache__
-*.pyc
-*.pyo
-*.pyd
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .git
 .gitignore
 README.md
@@ -10,4 +10,6 @@ README.md
 .vscode
 .DS_Store
 *.log
-node_modules 
+coverage
+.nyc_output
+.cache 
