--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "business-card-crm",
-  "version": "1.0.0",
-  "description": "Node.js Express API for business card CRM with PostgreSQL",
+  "version": "2.0.0",
+  "description": "Node.js Express API for business card CRM with PostgreSQL and user authentication",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -18,7 +18,9 @@
     "pg": "^8.11.3",
     "dotenv": "^16.3.1",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4"
+    "compression": "^1.7.4",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
@@ -28,7 +30,9 @@
     "postgresql",
     "business-card",
     "crm",
-    "api"
+    "api",
+    "authentication",
+    "jwt"
   ],
   "author": "DaVeenci AI",
   "license": "MIT"
