--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^16.3.1",
     "@google/generative-ai": "^0.2.1",
     "axios": "^1.6.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
