--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "test": "node test-enhanced-features.js",
     "test-api": "node test-api.js",
     "setup": "node setup-env.js",
-    "check-schema": "node check-schema.js",
-    "add-research": "node add-research-column.js",
-    "process-image": "bash process-image.sh"
+    "check-schema": "node check-schema.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "@google/generative-ai": "^0.2.1",
